--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">GPS ME Controls Execution</p>
 				</div>
 				<div class="col">
-					<img src="GM.jfif" alt="Company Logo">
+					<img src="GM1.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
