--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<p class="text-detail">(+1) 248 525 8030</p>
 					</div>
 					<div class="col">
-						<img src="https://www.gm.com/" alt="Right Arrow" height="50%" width="40%">
+						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -80,7 +80,7 @@
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">tech.gov.sg</p>
+						<p class="text-detail">https://www.gm.com/</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
